--- a/JS DrumKit/start.html
+++ b/JS DrumKit/start.html
@@ -58,14 +58,34 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-  window.addEventListener('keydown', function(e) {
-    console.log(e.keyCode);
+  
+
+  function playSound(e) {
+    //console.log(e.keyCode);
      const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+     const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
      if(!audio) return;
      audio.currentTime = 0;
      audio.play();
-    console.log(audio);
-  });
+
+     key.classList.add('playing');
+
+    // console.log(audio);
+    // console.log(key);
+  
+  }
+
+  function removeTransition(e) {
+    //console.log(e);
+    if(e.propertyName !== 'transform') return;
+    this.classList.remove('playing'); 
+    //console.log(e.propertyName);
+      }
+
+  const keys = document.querySelectorAll('.key');
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+
+  window.addEventListener('keydown', playSound);
 </script>
 
 
